fixing the overflow of the wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ a {
   background: var(--background);
   min-height: 100vh;
   /* max-width: 100vw; */
+  overflow: hidden;
 }
 
 /* <!-- dark mode toggler button --> */
